Fix level on mobile

--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -1253,7 +1253,7 @@ a.box:active {
 
 .button.is-small {
   border-radius: 2px;
-  font-size: 0.75rem;
+  font-size: 0.85rem;
 }
 
 .button.is-medium {
@@ -1438,7 +1438,7 @@ a.box:active {
 }
 
 .content.is-small {
-  font-size: 0.75rem;
+  font-size: 0.85rem;
 }
 
 .content.is-medium {
@@ -1590,7 +1590,7 @@ a.box:active {
 .input.is-small,
 .textarea.is-small {
   border-radius: 2px;
-  font-size: 0.75rem;
+  font-size: 0.85rem;
 }
 
 .input.is-medium,
@@ -1768,7 +1768,7 @@ a.box:active {
 
 .select.is-small {
   border-radius: 2px;
-  font-size: 0.75rem;
+  font-size: 0.85rem;
 }
 
 .select.is-medium {
@@ -1799,7 +1799,7 @@ a.box:active {
 
 .help {
   display: block;
-  font-size: 0.75rem;
+  font-size: 0.85rem;
   margin-top: 5px;
 }
 
@@ -1961,7 +1961,7 @@ a.box:active {
 }
 
 .control.has-icon .input.is-small + .icon {
-  font-size: 0.75rem;
+  font-size: 0.85rem;
 }
 
 .control.has-icon .input.is-medium + .icon {
@@ -2339,7 +2339,7 @@ a.box:active {
 }
 
 .progress.is-small {
-  height: 0.75rem;
+  height: 0.85rem;
 }
 
 .progress.is-medium {
@@ -2426,7 +2426,7 @@ a.box:active {
   border-radius: 290486px;
   color: #4a4a4a;
   display: inline-flex;
-  font-size: 0.75rem;
+  font-size: 0.85rem;
   height: 2em;
   justify-content: center;
   line-height: 1.5;
@@ -2642,13 +2642,11 @@ a.box:active {
   cursor: pointer;
   display: inline-block;
   font-size: 1rem;
-  height: 0px;
+  height: 20px;
   outline: none;
   position: relative;
-  transform: rotate(45deg);
-  transform-origin: center center;
   vertical-align: top;
-  width: 0px;
+  width: 20px;
 }
 
 .delete:before, .delete:after {
@@ -2658,7 +2656,8 @@ a.box:active {
   left: 50%;
   position: absolute;
   top: 50%;
-  transform: translateX(-50%) translateY(-50%);
+  transform: translateX(-50%) translateY(-50%) rotate(45deg);
+  transform-origin: center center;
 }
 
 .delete:before {
@@ -2680,18 +2679,18 @@ a.box:active {
 }
 
 .delete.is-small {
-  height: 0px;
-  width: 0px;
+  height: 16px;
+  width: 16px;
 }
 
 .delete.is-medium {
-  height: 0px;
-  width: 0px;
+  height: 24px;
+  width: 24px;
 }
 
 .delete.is-large {
-  height: 2px;
-  width: 2px;
+  height: 32px;
+  width: 32px;
 }
 
 .fa {
@@ -2907,11 +2906,20 @@ a.box:active {
   display: flex;
 }
 
-.level.is-mobile > .level-item:not(:last-child) {
+.level.is-mobile .level-left,
+.level.is-mobile .level-right {
+  display: flex;
+}
+
+.level.is-mobile .level-left + .level-right {
+  margin-top: 0;
+}
+
+.level.is-mobile .level-item:not(:last-child) {
   margin-bottom: 0;
 }
 
-.level.is-mobile > .level-item:not(.is-narrow) {
+.level.is-mobile .level-item:not(.is-narrow) {
   flex-grow: 1;
 }
 
@@ -3267,13 +3275,11 @@ a.box:active {
   cursor: pointer;
   display: inline-block;
   font-size: 1rem;
-  height: 0px;
+  height: 20px;
   outline: none;
   position: relative;
-  transform: rotate(45deg);
-  transform-origin: center center;
   vertical-align: top;
-  width: 0px;
+  width: 20px;
   background: none;
   height: 40px;
   position: fixed;
@@ -3289,7 +3295,8 @@ a.box:active {
   left: 50%;
   position: absolute;
   top: 50%;
-  transform: translateX(-50%) translateY(-50%);
+  transform: translateX(-50%) translateY(-50%) rotate(45deg);
+  transform-origin: center center;
 }
 
 .modal-close:before {
@@ -3311,18 +3318,18 @@ a.box:active {
 }
 
 .modal-close.is-small {
-  height: 0px;
-  width: 0px;
+  height: 16px;
+  width: 16px;
 }
 
 .modal-close.is-medium {
-  height: 0px;
-  width: 0px;
+  height: 24px;
+  width: 24px;
 }
 
 .modal-close.is-large {
-  height: 2px;
-  width: 2px;
+  height: 32px;
+  width: 32px;
 }
 
 .modal-card {
@@ -4067,7 +4074,7 @@ label.panel-block:hover {
 }
 
 .tabs.is-small {
-  font-size: 0.75rem;
+  font-size: 0.85rem;
 }
 
 .tabs.is-medium {
@@ -6184,7 +6191,7 @@ svg {
 #carbonads .carbon-poweredby {
   bottom: 0;
   color: #7a7a7a;
-  font-size: 0.75rem;
+  font-size: 0.85rem;
   left: 160px;
   line-height: 20px;
   padding: 0 15px 10px 0;
